--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/html2pdf.js/dist/html2pdf.bundle.min.js",
+              "node_modules/jspdf/dist/jspdf.umd.js"
+            ]
           },
           "configurations": {
             "production": {
